# imagegen-kit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  Makefile  README.md  RELEASE_CHECKLIST.md  github_release.sh  install.sh  models.json
.firecrawl/: zenmux-image-generation.md  zenmux-models-imagen-images.md  zenmux-models-imagen.md  zenmux-openai-image-generation.md
.github/workflows/: release.yml
skills/imagegen-kit/: SKILL.md
src/: auth.rs  cache.rs  lib.rs  main.rs  models.rs  utils.rs
src/provider/: mod.rs  traits.rs  zenmux.rs
