[package]
name = "imagegen-kit"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
directories = "5.0"
indicatif = "0.17"
mime_guess = "2.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "time"] }

[[bin]]
name = "imagegen-kit"
path = "src/main.rs"

[lib]
name = "imagegen_kit"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
